--- a/css/style.css
+++ b/css/style.css
@@ -140,5 +140,21 @@ P{
     display: block;
     margin-top: -0.9375rem;
     height: .9375rem;
-    
+
+}
+
+
+/* 2 navbar */
+
+.header_wrapper .navbar{
+
+    padding: .9375rem 0;
+    background-color:var(--bg-white);
+    -webkit-box-shadow:0.5rem .375rem -0.375rem rgb(0 0 0 / 40% );
+    box-shadow: 0 .5rem .375rem -0.375rem rgb(0 0 0 / 40% );
+    -webkit-transition:background 0s ease-in-out 0s, margin-top 0s ease-in-out 0s, opacity 0s ease-in-out 0s;
+    transition:background 0s ease-in-out 0s, margin-top 0s ease-in-out 0s, opacity 0s ease-in-out 0s;
+
+
+
 }
