--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -1,6 +1,68 @@
-@media(max-width: 1199px){
+@media(max-width:1199px){
 
-    .navbar-expand-lg .navbar-nav{
+    .header_wrapper .navbar-expand-lg .navbar-nav{
         align-items: center;
     }
+    .header_wrapper .navbar-expand-lg .navbar-nav .nav-link{
+        padding: 0;
+        font-size: .875rem;
+    }
+    .main-btn{
+        font-size: .875rem;
+    }
+}
+
+@media(max-width:991px){
+
+        /* custom csss */
+        section{
+            padding: 1.875rem 0;
+        }
+        /* 2 navbar */
+    .header-scrolled {
+        height: auto;
+
+    }
+    .header_wrapper .menu-navbar-nav{
+        text-align: center;
+        padding-bottom: .9375rem;   
+    }
+    .header_wrapper .nav-item .nav-link{
+
+        margin-top: .9375rem;
+    }
+
+
+}
+
+@media(max-width: 767px){
+
+ /* custom csss */
+  h1{
+
+    font-size: 1.875rem;
+    line-height: 2.5rem;
+  }
+  h3{
+
+    font-size: 1.75rem;
+    line-height: 2.1875rem;
+
+  }
+  h5{
+
+    font-size: 1.25rem;
+
+  }
+  P{
+      font-size: .8125rem;
+      line-height: 1.5rem;
+  }
+
+  /* blog */
+
+   /* footer */
+
+
+
 }
