--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ section{
     display: inline-block;
     transition: 0.3s ease-out;
     text-decoration: none;
-    margin-top: 10px;
+   
     
 
 
@@ -163,33 +163,33 @@ P{
 
 
     border: 0;
-    color: var(--primary-text);
+    color:var(--primary-text);
     line-height: 2;
 }
 
-.header_wrapper .navbar-toggler:focus{
+  .header_wrapper .navbar-toggler:focus{
     box-shadow: none;
 }
 
 .header_wrapper .nav-item{
-    margin: 0.625rem;
-}
-.header_wrapper .nav-item .nav-link {
+    margin: 0 .625rem;
+} 
+ .header_wrapper .nav-item .nav-link {
 
 
     font-size: 1rem;
     font-weight: 500;
     color: var(--primary-text);
-    display: inline-block;
-}
+    display: inline-block; 
 
-.header_wrapper .nav-item .nav-link:hover,
+ }
+ .header_wrapper .nav-item .nav-link:hover,
 .header_wrapper .nav-item .nav-link:active{
 
     color: var(--secondary-text);
-}
+} 
 
-.navbar-header-scrolled{
+ .navbar-header-scrolled{
 position: fixed;
 top: 0;
 left: 0;
@@ -211,4 +211,37 @@ animation: 500ms ease-in-out 0s normal none  1 running fadeIndown;
     100%{
         top: 0;
     }
+} 
+
+
+.banner_wrapper{
+
+    height: 40.625rem;
+
+}
+.banner_wrapper .swiper{
+    width: 100%;
+    height: 100%;
+}
+
+.banner_wrapper .swiper-slide{
+    width: 100%;
+    height: 100%;
+    background-position:center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+
+.banner_wrapper .swiper-slide::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-black);
+    opacity: 0.5;
+    z-index: 0;
 }
