--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@
   --bg-black:#000;
 
 
-  --primary-font: "Poppins",''Sans-serif'';
-  --secondary-font: "oswlad",''Sans-serif'' ;
+  --primary-font: "Poppins","Sans-serif";
+  --secondary-font: "oswlad", "Sans-serif" ;
     --secondary-text: #caa169;
     --text-white: #fff;
     --text-black : #15151515;
@@ -84,13 +84,13 @@ section{
 }
 h1{
 
-    font-size: 4.75rem;
-    line-height: 4.25rem;
-    font-weight: 700;
+    font-size: 5.75rem;
+    line-height: 5.25rem;
+    font-weight: 900;
     color: var(--text-white);
     margin-bottom: 1.2rem;
     text-transform: uppercase;
-    font-family: var(--secondary-font);
+    font-family:var(--primary-font);
 }
 h3{
 
@@ -98,8 +98,8 @@ h3{
     line-height: 2.875rem;
     font-weight: 700;
     font-size: 2.25rem;
-    color:var(--primary-text);
-    font-family: var(--secondary-font);
+    color:var(--primary-color);
+    font-family: var(--primary-font);
 }
 h3 span{
 
@@ -284,8 +284,6 @@ color: var(--bg-white);
     z-index: 99;
     position: relative;
 }
-
-
 
 /* ABOUT */
 .about_wrapper{
