--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ border: 0.0625rem solid var(--bg-white);
     z-index: 99;
     align-items: center;
     justify-content: center;
-    margin-top: 12%;
+    margin-top: 17%;
 
 }
 .banner_wrapper .swiper .silde-caption p{
@@ -288,4 +288,68 @@ color: var(--bg-white);
 /* ABOUT */
 .about_wrapper{
     padding-top: 9.375rem ;
+}
+
+.rooms_wrapper .room-items{
+     position: relative;
+     overflow: hidden;
+}
+
+.rooms_wrapper .room-items img{
+    width: 100%;
+    -webkit-transition: all 400ms ease-in 0s;
+    transition: all 400ms ease-in 0s;
+
+}
+
+.rooms_wrapper .room-items:hover img{
+-webkit-transform: scale3d(1.05,1.05,1.05);
+transform: scale3d(1.05, 1.05, 1.05);
+
+}
+.rooms_wrapper .room-items::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:var(--bg-black);
+    opacity: 0;
+    z-index: 1;
+    -webkit-transition: all 400ms ease-in 0s;
+    transition: all 400ms ease-in 0s;
+}
+
+.rooms_wrapper .room-items:hover::before{
+   
+    opacity: 0.6;
+}
+
+.rooms_wrapper .room-items .room-items-wrap{
+    position: absolute;
+    left: 1.875rem;
+    right: 1.875rem;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+
+}
+
+.rooms_wrapper .room-items .room-content{
+    border: .125rem solid var(--bg-white);
+    padding:5rem 1.875rem;
+    -webkit-transform: scale3d(1.2 , 1.2, 1.2);
+    transform: scale3d(1.2 , 1.2, 1.2);
+    transition: all 500ms ease-in 0s;
+    opacity: 0;
+
+
+
+}
+.rooms_wrapper .room-items:hover .room-content{
+
+    opacity: 1;
+    -webkit-transform: scale3d(1,1,1);
+    transform: scale3d(1,1,1);
 }
