--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -22,6 +22,21 @@
     }
 
 
+    .room-items .room-content{
+        padding: 1rem 1.875rem;
+    }
+
+    .room-items .room-content h5{
+
+
+        font-size: 1.2rem;
+    }
+    .room-items .room-content p{
+        font-size: 0.75rem;
+        
+    }
+
+
 
 }
 
@@ -64,9 +79,22 @@
     }
     
 
-.room-items .room-content{
-    padding: 1.875rem;
-}
+    .room-items .room-content{
+        padding: 2rem 1.875rem;
+    }
+
+    .room-items .room-content h5{
+
+
+        font-size: 1.5rem;
+    }
+    .room-items .room-content p{
+        font-size: 1rem;
+        
+    }
+
+
+
 
 
 }
