--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ transform: scale3d(1.05, 1.05, 1.05);
 
 .service-item-wrap{
 
-    background-color:var(--bg-white);
+    background-color:var(--bg-color);
 }
 
 
@@ -368,4 +368,90 @@ transform: scale3d(1.05, 1.05, 1.05);
     font-family: var(--primary-font);
     text-decoration: none;
     color: var(--bg-black);
+}
+
+.service-menu-area ul li a .service-icon{
+
+    height: 5.625rem;
+    width: 5.625rem;
+    background-color:var(--secondary-color);
+    line-height: 5.625rem;
+    text-align: center;
+    border-radius: 100%;
+    float: left;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+
+}
+
+.service-menu-area ul li a .service-icon:hover,
+.service-menu-area ul li a.active .service-icon{ 
+    background-color:var(--primary-color);
+    color: var(--text-white);
+    box-shadow: 0.125rem rgb(34 30 31 / 40%);
+}
+
+
+.service-menu-area ul li:nth-child(1){
+
+    margin-left: 0.5625rem;
+}
+
+.service-menu-area ul li:nth-child(2){
+
+    margin-left: -2.9375rem;
+}
+
+.service-menu-area ul li:nth-child(3){
+
+    margin-left: -6.375rem;
+}
+.service-menu-area ul li:nth-child(4){
+
+    margin-left: -8.8125rem;
+}
+
+.service-menu-area ul li a p, 
+.service-menu-area ul li a h5{
+    padding-left: 6.875rem ;
+    display: block;
+    text-align: left;
+}
+
+.counter{
+    background-image:url(../images/counter-bg.webp);
+    background-position:center center;
+    background-repeat:no-repeat;
+    background-size: cover;
+    padding: 5.125em;
+    position:relative; 
+}
+
+.counter::before{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    content:'';
+    width:100%;
+    height:100%;
+    background-color: var(--bg-black);
+    opacity: 0.5;
+    z-index: 1;
+}
+
+.counter h1,
+.counter p{
+    position:absolute;
+    z-index:3;
+    color:var(--text-white);
+    float: left;
+}
+
+
+.counter h1{
+    top: 0;
+}
+.counter p{
+    top: 10%;
 }
