--- a/css/style.css
+++ b/css/style.css
@@ -454,3 +454,85 @@ transform: scale3d(1.05, 1.05, 1.05);
 .counter p{
     top: 10%;
 }
+
+
+
+/* team section */
+
+.team_wrapper{
+    position: relative;
+    overflow: hidden;
+}
+
+
+.team_wrapper .team-info{
+    background-color:var(--secondary-color);
+    position: absolute;
+    width: 100%;
+    bottom: 0%;
+    text-align: center;
+    padding: 2.25rem ;
+    margin-bottom: -4.6875rem;
+    transition: all 0.3s ease-in-out;
+
+}
+
+
+.team_wrapper .card:hover  .team-info{
+
+    margin-bottom: 0;
+
+
+}
+
+
+.team_wrapper .team-info h5,
+.team_wrapper .team-info p{
+
+
+    color: var(--text-white);
+    font-family: var(--primary-font);
+    
+
+
+}
+
+.team_wrapper .team-info .social-network{
+    
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    padding: 2.25rem;
+    margin: 2.25rem -2.25rem -5.7em;
+    background-color: var(--primary-color);
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+ .team_wrapper .team-info .social-network li a{
+    color: var(--text-white);
+    width: 2rem;
+    height: 2rem;
+    line-height: 2rem;
+    display: block;
+    border-radius: 50%;
+    font-size:.9375;
+    border: .0625rem solid var(--bg-white);
+
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* team section */
