--- a/css/style.css
+++ b/css/style.css
@@ -469,10 +469,10 @@ transform: scale3d(1.05, 1.05, 1.05);
     background-color:var(--secondary-color);
     position: absolute;
     width: 100%;
-    bottom: 0%;
+    bottom: 0;
     text-align: center;
     padding: 2.25rem ;
-    margin-bottom: -4.6875rem;
+    margin-bottom: -7.8875rem;
     transition: all 0.3s ease-in-out;
 
 }
@@ -502,7 +502,7 @@ transform: scale3d(1.05, 1.05, 1.05);
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     padding: 2.25rem;
-    margin: 2.25rem -2.25rem -5.7em;
+    margin: 4.25rem -2.25rem -5.7em;
     background-color: var(--primary-color);
     list-style: none;
     display: flex;
@@ -521,18 +521,101 @@ transform: scale3d(1.05, 1.05, 1.05);
     font-size:.9375;
     border: .0625rem solid var(--bg-white);
 
-} 
-
-
-
-
-
-
-
-
-
-
-
+ }
 
 
 /* team section */
+
+
+/* gallery  section */
+
+.gallery_wrapper .gallery-item{
+
+    box-shadow: 0 0 .1875rem rgba(0,0,0,0.3);
+    overflow: hidden;
+    position: relative;
+}
+
+.gallery_wrapper .gallery-item:before,
+.gallery_wrapper .gallery-item:after,
+.gallery_wrapper .gallery-item-content:before,
+.gallery_wrapper .gallery-item-content:after{
+
+content:'';
+width: 50%;
+height: 50%;
+background:rgba(0,0,0,0.8);
+position:absolute;
+top: 0;
+left: 0;
+opacity: 0;
+-webkit-transition: all 0.5s ease-in-out;
+transition: all 0.5s ease-in-out;
+
+
+}
+.gallery_wrapper .gallery-item:after{
+    top: 50%;
+
+}
+.gallery_wrapper .gallery-item:hover:after{
+
+    top:0;
+    opacity:1;      
+
+
+}
+.gallery_wrapper .gallery-item:hover:before{
+
+    left:50%;
+    opacity:1;      
+
+
+}
+
+.gallery_wrapper .gallery-item-content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center ;
+    opacity: 0;
+    z-index: 1 ;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+}
+
+.gallery_wrapper .gallery-item:hover .gallery-item-content{
+    opacity: 1;
+}
+
+
+.gallery_wrapper .gallery-item-content:before,
+.gallery_wrapper .gallery-item-content:after{
+
+    top: 0;
+    left: 50%;
+    z-index: -1;
+
+}
+.gallery_wrapper .gallery-item-content:before{
+    top: 50%;
+    opacity: 1;
+
+
+}
+.gallery_wrapper .gallery-item-content:after{
+
+    top: 50%;
+}
+
+
+
+.gallery_wrapper .gallery-item:hover .gallery-item-content:after{
+
+
+    opacity: 1;
+    left: 0;
+}
+/* gallery  section */
