--- a/css/style.css
+++ b/css/style.css
@@ -619,3 +619,31 @@ transition: all 0.5s ease-in-out;
     left: 0;
 }
 /* gallery  section */
+
+
+
+
+/* price section */
+
+.price_wrapper .card{
+    box-shadow: 0 .125rem .25rem rgb(34 30 31/ 40%);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.price_wrapper .card:hover{
+    background-color: var(--secondary-color);
+
+
+}
+
+
+.price_wrapper .card:hover h3,
+.price_wrapper .card:hover h5,
+.price_wrapper .card:hover p{
+    color: var(--text-white);
+}
+.price_wrapper .card:hover .main-btn{
+    color:var(--text-white);
+    border-color: var(--text-white) ;
+}
