--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ transform: scale3d(1.05, 1.05, 1.05);
 
 
 .team_wrapper .team-info{
-    background-color:var(--secondary-color);
+    background-color: rgba(158, 120, 49, 0.781);
     position: absolute;
     width: 100%;
     bottom: 0;
@@ -646,4 +646,15 @@ transition: all 0.5s ease-in-out;
 .price_wrapper .card:hover .main-btn{
     color:var(--text-white);
     border-color: var(--text-white) ;
+}
+
+/* blog section */
+
+.blog_wrapper .blog-content{
+
+
+    margin: -5rem 0 0 4.375rem;
+    box-shadow: 0 .125rem .25rem rgb(34  30 31 / 40%);
+    
+
 }
