--- a/css/style.css
+++ b/css/style.css
@@ -658,3 +658,27 @@ transition: all 0.5s ease-in-out;
     
 
 }
+
+
+
+/* footer section */
+
+.footer_wrapper{
+    background-color:var(--bg-black);
+    font-family: var(--primary-font);
+    text-decoration: none;
+
+}
+.footer_wrapper h5{
+        color: var(--text-white);
+        margin-bottom: 1.25rem ;
+        font-family:var(--secondary-font);
+}
+.footer_wrapper ul li{
+    margin-bottom: .5rem;
+    list-style: none;
+}
+
+.contact-info{
+    text-decoration: none;
+}
