--- a/css/style.css
+++ b/css/style.css
@@ -679,6 +679,78 @@ transition: all 0.5s ease-in-out;
     list-style: none;
 }
 
-.contact-info{
-    text-decoration: none;
+.footer_wrapper .contact-info ul  li a {
+    color: var(--secondary-color);
+}
+.footer_wrapper .link-widget li a,
+.footer_wrapper p {
+    color: var(--text-gray);
+    font-size: .875rem;
+    padding: 1.5rem;
+    position: relative;
+    -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
+
+
+}
+
+
+.footer_wrapper .link-widget li a:before{
+    content: '\f105';
+    font-family:"Font Awesome 5 Free";
+    font-weight: 900;
+    left: 0.3rem;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+
+}
+
+
+.footer_wrapper .link-widget li a:hover{
+    color: var(--secondary-color);
+    margin-left: .625rem;
+}
+.footer_wrapper .social-network a{
+    width: 2.1875rem;
+    height: 2.1875rem;
+    margin:.5rem;
+    line-height:2rem;
+    font-size:.875rem;
+    display: inline-block;
+    border:.125rem solid var(--text-gray);
+    color:var(--text-gray);
+    text-align: center;
+    border-radius: 100% ;
+    -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.footer_wrapper .social-network a:hover{
+    outline: none;
+    background-color: var(--secondary-color) ;
+    border-color: var(--secondary-color);
+    transform: translateY(-0.1875);
+    box-shadow: 0 .625rem .9375rem 0 rgb( 0 0 0 / 10%);
+
+}
+
+
+.footer_wrapper .form-control:focus{
+outline: none;
+box-shadow: none;
+background-color:var(--secondary-color) ;
+
+
+}
+.footer_wrapper .copright-section{
+
+
+    background-color: var(--primary-color);
+    padding: .5rem  ;
+    text-align: center;
+}
+
+.footer_wrapper .copright-section a{
+    color: var(--secondary-color);
+    font-weight: bold;
 }
