--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,7 @@ transition: all 0.5s ease-in-out;
 /* footer section */
 
 .footer_wrapper{
-    background-color:var(--bg-black);
+    background-color:var(--primary-color);
     font-family: var(--primary-font);
     text-decoration: none;
 
@@ -745,7 +745,7 @@ background-color:var(--secondary-color) ;
 .footer_wrapper .copright-section{
 
 
-    background-color: var(--primary-color);
+    background-color: rgb(92, 92, 92);
     padding: .5rem  ;
     text-align: center;
 }
